# Patent-System

./: .gitignore  CMakeLists.txt  README.md  blueprint.md  firm.hpp  firmSys.hpp  main  main.cpp  patent.hpp  test.md  vector_template.hpp
data/: FirmData.csv  PatentData.csv  patent1.csv  patent2.csv
include/: firm.hpp  firmSys.hpp  patent.hpp
include/template/: queue_template.hpp  stack_template.hpp
src/: main.cpp  test  test.cpp
template/: linked_list_template.hpp
